# image-processing-opencv

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: attribute.h  common.h
include/component/: correction.h  image_proc.h  positioning.h
include/error_code/: error_code.h
src/: image_proc.cpp
src/component/: correction.cpp  image_proc.cpp  positioning.cpp
